<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.balazsorban.pushup.Home">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:id="@+id/home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/linearLayout8"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="2">

            <Button
                android:id="@+id/currentPushUpBtn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="192dp"
                android:layout_height="192dp"
                android:layout_marginTop="0dp"
                android:elevation="0dp"
                android:text="@string/current_pushup"
                android:textSize="128sp"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Chronometer
                android:id="@+id/chronometer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="right|center_horizontal"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout8"
            app:layout_constraintVertical_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="32dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/donePushUpBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:onClick="doneCurrentPushUp"
                    android:text="@string/save_progress"
                    android:textColor="@android:color/background_light"
                    app:layout_constraintEnd_toStartOf="@+id/cancelPushUpBtn"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="435dp" />

                <Button
                    android:id="@+id/cancelPushUpBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:onClick="cancelCurrentPushUp"
                    android:text="@string/cancel_session"
                    android:textColor="@android:color/background_light"
                    app:layout_constraintBottom_toBottomOf="@+id/donePushUpBtn"
                    app:layout_constraintEnd_toStartOf="@+id/activityBtn"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/donePushUpBtn"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="427dp" />
            </LinearLayout>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/activityBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:layout_weight="4"
                android:padding="0dp"
                android:src="@drawable/ic_play_arrow_black_24dp"
                android:tint="#FFF"
                app:fabSize="normal"
                app:layout_constraintBottom_toBottomOf="@+id/cancelPushUpBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/cancelPushUpBtn"
                tools:layout_editor_absoluteY="427dp" />

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</FrameLayout>
